--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-streamlit==1.28.0
-pandas==2.0.3
-matplotlib==3.7.1
-openpyxl==3.1.2
-numpy==1.24.3
-python-dateutil==2.8.2
+streamlit>=1.28.0
+pandas>=2.0.0,<2.1.0
+matplotlib>=3.7.0,<3.8.0
+openpyxl>=3.1.0
+numpy>=1.24.0
+python-dateutil>=2.8.0
